--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -175,4 +175,83 @@ text-align: left;
     justify-content: space-evenly;
     align-items: flex-start;
 }
+/* start section*/
+.testimonial .row
+{
+    display: flex;
+    flex-wrap: wrap;
+}
+.testimonials h2
+{
+    text-align: center;
+    padding: 30px;
+}
 
+.testimonial
+{
+    position: relative;
+    width: calc((100% - 20px) / 2);
+    background: #ffffff;
+    box-shadow: 0px 8.23719596862793px 8.23719596862793px rgb(170, 159, 159);
+    margin-bottom: 20px;
+    padding:15px 70px;
+}
+.testimonials .client img
+{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+.rating img
+{
+    width : 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.testimonials .client
+{
+    display: flex;
+}
+.testimonials .testimonial .client .client-data h3{
+    font-family: var(--mainFont);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 11px;
+    text-align: left;
+    color: #000000;
+    margin-bottom: 14px;
+    margin-top: 5px;
+}
+.testimonial span{
+    font-family: var(--mainFont);
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 9px;
+    text-align: left;
+    color: #969696;
+}
+.testimonial p{
+    width: 421px;
+    font-family: var(--mainFont);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    text-align: left;
+    color: #646464;
+}
+.testimonial .comment
+{
+    display: flex;
+    flex-wrap: wrap;
+}
+.testimonial ::after
+{
+    content: ' ';
+    border-top: 60px solid #e9e9e98f;
+    border-left: 60px solid transparent;
+    border-bottom: 50px solid transparent;
+    position:absolute;
+    top: 0;
+    right: 0;
+}
