--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2,44 +2,73 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-*
-{
-    margin :0;
-    box-sizing:border-box;
+
+* {
+    margin : 0;
+    box-sizing: border-box;
     padding: 0;
 
 }
-:root
-{
-    --mainFont : "Poppins", sans-serif;
-    --subFont1:"Roboto", sans-serif;
-    --subFont2:"Inter", sans-serif;
-    --mainColour:#545be8;
+
+:root {
+    --mainFont: "Poppins", sans-serif;
+    --subFont1: "Roboto", sans-serif;
+    --subFont2: "Inter", sans-serif;
+    --mainColour: #545be8;
 }
-.header
-{
+
+.body {
+    font-family: var(--mainFont);
+    
+    width: 5rem;
+}
+
+.container {
+  
+    margin:  auto;
+}
+
+.header  .row {
     display: flex;
-    flex-wrap: wrap;
-}
-body{
-    font-family :var(--mainFont);
-    height: 3000px;
-}
-.container
-{
-    width : calc( 100% - 300px );
-    margin :auto;
-}
-.row
-{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
- ul{
-    list-style: none;  
+.footer  .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
 }
- a {
+.testimonials  .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.section-2 .row
+{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    
+}
+.about  .row {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.intro  .row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 80%;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
     text-decoration: none;
 }
